--- a/TrafficLight/Base.lproj/Main.storyboard
+++ b/TrafficLight/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,61 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TrafficLight" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PhB-at-jF9">
+                                <rect key="frame" x="165" y="227" width="83.5" height="83.5"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="PhB-at-jF9" secondAttribute="height" multiplier="1:1" id="gq8-TB-FRi"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TA9-zm-JbA">
+                                <rect key="frame" x="165" y="340.5" width="83.5" height="83.5"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="TA9-zm-JbA" secondAttribute="height" multiplier="1:1" id="lLB-r7-b6g"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H8P-GQ-uRf">
+                                <rect key="frame" x="167" y="746" width="80" height="60"/>
+                                <color key="backgroundColor" red="0.19270077892602736" green="0.5041802016575343" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <state key="normal" title="Stop">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GYa-AT-epz">
+                                <rect key="frame" x="165" y="121" width="80" height="80"/>
+                                <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="GYa-AT-epz" secondAttribute="height" multiplier="1:1" id="yqq-5Z-7mE"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <constraints>
+                            <constraint firstItem="TA9-zm-JbA" firstAttribute="trailing" secondItem="PhB-at-jF9" secondAttribute="trailing" id="2bv-dO-JJT"/>
+                            <constraint firstItem="GYa-AT-epz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="77" id="5Nz-ET-OB4"/>
+                            <constraint firstItem="PhB-at-jF9" firstAttribute="trailing" secondItem="GYa-AT-epz" secondAttribute="trailing" constant="3.5" id="GQC-Wr-uLH"/>
+                            <constraint firstItem="TA9-zm-JbA" firstAttribute="leading" secondItem="PhB-at-jF9" secondAttribute="leading" id="MTX-bO-qGE"/>
+                            <constraint firstItem="GYa-AT-epz" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" constant="-2" id="SLk-An-rga"/>
+                            <constraint firstItem="PhB-at-jF9" firstAttribute="top" secondItem="GYa-AT-epz" secondAttribute="bottom" constant="26" id="Y51-tA-fKd"/>
+                            <constraint firstItem="H8P-GQ-uRf" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fZP-yQ-EVf"/>
+                            <constraint firstItem="GYa-AT-epz" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.2" constant="-2.8000000000000114" id="fqX-iS-WhS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="H8P-GQ-uRf" secondAttribute="bottom" constant="56" id="mZ5-cG-dOp"/>
+                            <constraint firstItem="TA9-zm-JbA" firstAttribute="top" secondItem="PhB-at-jF9" secondAttribute="bottom" constant="30" id="v65-Kq-n3w"/>
+                            <constraint firstItem="PhB-at-jF9" firstAttribute="leading" secondItem="GYa-AT-epz" secondAttribute="leading" id="w95-Lf-U7B"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="101.78571428571428"/>
         </scene>
     </scenes>
 </document>
