--- a/TrafficLight/Base.lproj/Main.storyboard
+++ b/TrafficLight/Base.lproj/Main.storyboard
@@ -30,12 +30,18 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H8P-GQ-uRf">
-                                <rect key="frame" x="167" y="746" width="80" height="60"/>
+                                <rect key="frame" x="119" y="753" width="176" height="53"/>
                                 <color key="backgroundColor" red="0.19270077892602736" green="0.5041802016575343" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                <state key="normal" title="Stop">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="53" id="2Y7-zC-z5m"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                <state key="normal" title="START">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="J2e-5w-Iig"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GYa-AT-epz">
                                 <rect key="frame" x="165" y="121" width="80" height="80"/>
@@ -58,9 +64,16 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="H8P-GQ-uRf" secondAttribute="bottom" constant="56" id="mZ5-cG-dOp"/>
                             <constraint firstItem="TA9-zm-JbA" firstAttribute="top" secondItem="PhB-at-jF9" secondAttribute="bottom" constant="30" id="v65-Kq-n3w"/>
                             <constraint firstItem="PhB-at-jF9" firstAttribute="leading" secondItem="GYa-AT-epz" secondAttribute="leading" id="w95-Lf-U7B"/>
+                            <constraint firstItem="H8P-GQ-uRf" firstAttribute="leading" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="119" id="yym-7c-NWV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="changeColorButton" destination="H8P-GQ-uRf" id="9kz-7C-KSr"/>
+                        <outlet property="greenLightView" destination="TA9-zm-JbA" id="VjC-Ua-K89"/>
+                        <outlet property="redLightView" destination="GYa-AT-epz" id="J7m-vJ-bQr"/>
+                        <outlet property="yellowLightView" destination="PhB-at-jF9" id="Dso-DF-jdE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
